--- a/argocd-helm-charts/netbird/charts/netbird/templates/management-cm.yaml
+++ b/argocd-helm-charts/netbird/charts/netbird/templates/management-cm.yaml
@@ -1,9 +1,12 @@
+{{- if .Values.management.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "netbird.fullname" . }}-management
+  namespace: {{ include "netbird.namespace" . }}
   labels:
     {{- include "netbird.management.labels" . | nindent 4 }}
 data:
-  management.tmpl.json: |-
-    {{- .Files.Get "management.tmpl.json" | nindent 4 }}
+  management.json: |-
+    {{- .Values.management.configmap | nindent 4 }}
+{{- end -}}
