--- a/argocd-helm-charts/netbird/charts/netbird/templates/relay-ingress.yaml
+++ b/argocd-helm-charts/netbird/charts/netbird/templates/relay-ingress.yaml
@@ -1,21 +1,13 @@
+{{- if .Values.relay.enabled -}}
 {{- if .Values.relay.ingress.enabled -}}
 {{- $fullName := printf "%s-relay" (include "netbird.fullname" .) -}}
 {{- $svcPort := .Values.relay.service.port -}}
-{{- if and .Values.relay.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
-  {{- if not (hasKey .Values.relay.ingress.annotations "kubernetes.io/ingress.class") }}
-  {{- $_ := set .Values.relay.ingress.annotations "kubernetes.io/ingress.class" .Values.relay.ingress.className}}
-  {{- end }}
-{{- end }}
-{{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
+
 apiVersion: networking.k8s.io/v1
-{{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
 kind: Ingress
 metadata:
   name: {{ $fullName }}
+  namespace: {{ include "netbird.namespace" . }}
   labels:
     {{- include "netbird.relay.labels" . | nindent 4 }}
   {{- with .Values.relay.ingress.annotations }}
@@ -23,9 +15,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- if and .Values.relay.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
   ingressClassName: {{ .Values.relay.ingress.className }}
-  {{- end }}
   {{- if .Values.relay.ingress.tls }}
   tls:
     {{- range .Values.relay.ingress.tls }}
@@ -43,19 +33,13 @@ spec:
         paths:
           {{- range .paths }}
           - path: {{ .path }}
-            {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
             pathType: {{ .pathType }}
-            {{- end }}
             backend:
-              {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
                 name: {{ $fullName }}
                 port:
                   number: {{ $svcPort }}
-              {{- else }}
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
-              {{- end }}
           {{- end }}
     {{- end }}
+{{- end }}
 {{- end }}
