--- a/argocd-helm-charts/netbird/charts/netbird/templates/management-ingress.yaml
+++ b/argocd-helm-charts/netbird/charts/netbird/templates/management-ingress.yaml
@@ -1,24 +1,23 @@
-{{- if .Values.signal.enabled -}}
-
-{{- if .Values.signal.ingress.enabled -}}
-{{- $fullName := printf "%s-signal" (include "netbird.fullname" .) -}}
-{{- $svcPort := .Values.signal.service.port -}}
+{{- if .Values.management.enabled -}}
+{{- if .Values.management.ingress.enabled -}}
+{{- $fullName := printf "%s-management" (include "netbird.fullname" .) -}}
+{{- $svcPort := .Values.management.service.port -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
   namespace: {{ include "netbird.namespace" . }}
   labels:
-    {{- include "netbird.signal.labels" . | nindent 4 }}
-  {{- with .Values.signal.ingress.annotations }}
+    {{- include "netbird.management.labels" . | nindent 4 }}
+  {{- with .Values.management.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  ingressClassName: {{ .Values.signal.ingress.className }}
-  {{- if .Values.signal.ingress.tls }}
+  ingressClassName: {{ .Values.management.ingress.className }}
+  {{- if .Values.management.ingress.tls }}
   tls:
-    {{- range .Values.signal.ingress.tls }}
+    {{- range .Values.management.ingress.tls }}
     - hosts:
         {{- range .hosts }}
         - {{ . | quote }}
@@ -27,7 +26,7 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    {{- range .Values.signal.ingress.hosts }}
+    {{- range .Values.management.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
