--- a/argocd-helm-charts/netbird/charts/netbird/templates/relay-serviceaccount.yaml
+++ b/argocd-helm-charts/netbird/charts/netbird/templates/relay-serviceaccount.yaml
@@ -1,12 +1,15 @@
+{{- if .Values.relay.enabled -}}
 {{- if .Values.relay.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "netbird.relay.serviceAccountName" . }}
+  namespace: {{ include "netbird.namespace" . }}
   labels:
     {{- include "netbird.relay.labels" . | nindent 4 }}
   {{- with .Values.relay.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+{{- end }}
 {{- end }}
