--- a/argocd-helm-charts/netbird/charts/netbird/templates/signal-serviceaccount.yaml
+++ b/argocd-helm-charts/netbird/charts/netbird/templates/signal-serviceaccount.yaml
@@ -1,12 +1,16 @@
+{{- if .Values.signal.enabled -}}
+
 {{- if .Values.signal.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "netbird.signal.serviceAccountName" . }}
+  namespace: {{ include "netbird.namespace" . }}
   labels:
     {{- include "netbird.signal.labels" . | nindent 4 }}
   {{- with .Values.signal.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+{{- end }}
 {{- end }}
