fix: added chart.yaml for netbird, after migrating to official helm chart

--- a/argocd-helm-charts/netbird/Chart.yaml
+++ b/argocd-helm-charts/netbird/Chart.yaml
@@ -2,14 +2,6 @@ apiVersion: v2
 name: netbird
 version: 1.0.0
 dependencies:
-  # Manually copied from
-  # https://github.com/jaconi-io/helm-charts.git@62bbba55c48f20e812d9622072778af9cc6a37d1
   - name: netbird
-    version: 0.15.0
-    repository: https://charts.jaconi.io
-  - name: netbird-dashboard
-    version: 1.2.0
-    repository: https://charts.jaconi.io
-  - name: coturn
-    version: 1.0.3
-    repository: https://charts.jaconi.io
+    version: 1.6.1
+    repository: https://netbirdio.github.io/netbird
